--- a/file/build.gradle
+++ b/file/build.gradle
@@ -18,9 +18,9 @@ repositories {
 }
 
 dependencies {
+    compileOnly project(":core")
     compileOnly group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.4.32'
     compileOnly group: 'org.spigotmc', name: 'spigot', version: '1.12.2'
-
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
     testImplementation(project(":core"))
     testRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.2'
@@ -59,7 +59,7 @@ publishing {
     publications {
         create("jar", MavenPublication) {
             groupId 'skywolf46'
-            artifactId 'asyncdataloader-core'
+            artifactId 'asyncdataloader-file'
             version rootProject.properties['version'] as String
             from components.java
         }
