AsyncDataLoader 3.0.0.3 - Fixed many things

--- a/file/src/main/resources/plugin.yml
+++ b/file/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: AsyncDataLoader-FileSystem
 version: 1.0
-main: skywolf46.asyncdataloader.file.AsyncDataLoader
+main: skywolf46.asyncdataloader.file.FileBasedDataLoaderPlugin
 depend:
   - SkywolfExtraUtility
   - AsyncDataLoader-Core
