--- a/file/build.gradle
+++ b/file/build.gradle
@@ -49,7 +49,7 @@ publishing {
     repositories {
         maven {
             name = "Reposilite"
-            url(rootProject.properties["snapshot"] as Boolean ? rootProject.properties['reposilite.snapshot'] as String : rootProject.properties['reposilite.release'] as String)
+            url(rootProject.properties['reposilite.release'])
             credentials {
                 username rootProject.properties['reposilite.user'] as String
                 password rootProject.properties['reposilite.token'] as String
