--- a/mysql/build.gradle
+++ b/mysql/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
     compileOnly project(":core")
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
 
     compileOnly group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.4.32'
     compileOnly group: 'org.spigotmc', name: 'spigot', version: '1.12.2'
@@ -55,7 +56,7 @@ publishing {
     repositories {
         maven {
             name = "Reposilite"
-            url(rootProject.properties["snapshot"] as Boolean ? rootProject.properties['reposilite.snapshot'] as String : rootProject.properties['reposilite.release'] as String)
+            url(rootProject.properties['reposilite.release'])
             credentials {
                 username rootProject.properties['reposilite.user'] as String
                 password rootProject.properties['reposilite.token'] as String
