AsyncDataLoader 3.0.0.29 - Fixed many things

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -35,6 +35,7 @@ jar {
 }
 
 processResources {
+    outputs.upToDateWhen { false }
     filesMatching(["loaderDeclaration.properties", "plugin.yml"]*.toString()) {
         expand(["version": rootProject.properties["version"] as String])
     }
