--- a/mysql/build.gradle
+++ b/mysql/build.gradle
@@ -8,7 +8,6 @@ plugins {
 
 repositories {
     mavenCentral()
-    jcenter()
     maven {
         url = uri(rootProject.properties["reposilite.release"])
     }
@@ -21,10 +20,12 @@ repositories {
 dependencies {
     compileOnly project(":core")
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.24'
 
     compileOnly group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.4.32'
     compileOnly group: 'org.spigotmc', name: 'spigot', version: '1.12.2'
-    implementation 'com.github.luben:zstd-jni:1.4.9-5'
+    // TODO add compressing filter
+    compileOnly 'com.github.luben:zstd-jni:1.4.9-5'
     testCompileOnly group: 'org.spigotmc', name: 'spigot', version: '1.12.2'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
@@ -38,10 +39,16 @@ test {
 
 jar {
     baseName "AsyncDataLoader-${project.name.capitalize()}"
+    finalizedBy("shadowJar")
+}
+
+shadowJar {
+    baseName "AsyncDataLoader-${project.name.capitalize()}-shaded"
 }
 
 
 processResources {
+    outputs.upToDateWhen { false }
     filesMatching(["loaderDeclaration.properties", "plugin.yml"]*.toString()) {
         expand(["version": rootProject.properties["version"] as String])
     }
