AsyncDataLoader 3.0.0.38 - Stabilized features - Fixed shutdown hook not working in main thread - Fixed multiple batch causing exception

--- a/mysql/build.gradle
+++ b/mysql/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 dependencies {
     compileOnly project(":core")
+    compileOnly project(":file")
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.24'
 
